Hardcode page issues vertically alignment
Bug: T234254

--- a/resources/skins.minerva.content.styles/templates/ambox.less
+++ b/resources/skins.minerva.content.styles/templates/ambox.less
@@ -105,7 +105,7 @@ table.ambox {
 	.mw-ui-icon {
 		position: absolute;
 		left: @amboxPadding;
-		top: @amboxPadding * 2;
+		top: 11px;
 	}
 
 	.ambox-learn-more {
